--- a/app/src/main/res/layout/activity_edit_workout.xml
+++ b/app/src/main/res/layout/activity_edit_workout.xml
@@ -56,6 +56,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:text="Mentés"
+        android:background="@drawable/custom_button"
+        android:textColor="@color/white"
         android:textAllCaps="false" />
 
 
