--- a/app/src/main/res/layout/activity_fitness_machine_details.xml
+++ b/app/src/main/res/layout/activity_fitness_machine_details.xml
@@ -57,6 +57,8 @@
         android:layout_below="@+id/fmDetailsRv"
         android:layout_centerHorizontal="true"
         android:clickable="true"
+        android:backgroundTint="#0061ef"
+        app:tint="@color/white"
         app:srcCompat="@drawable/ic_add_black" />
 
     <!--
