--- a/app/src/main/res/menu/workout_menu.xml
+++ b/app/src/main/res/menu/workout_menu.xml
@@ -5,5 +5,9 @@
         android:id="@+id/workout_action_popup_start"
         android:title="Edzés Indítása" />
 
+    <item
+        android:id="@+id/workout_action_popup_delete"
+        android:title="Sablon törlése" />
+
 
 </menu>
