--- a/app/src/main/res/layout/activity_edit_workout_template.xml
+++ b/app/src/main/res/layout/activity_edit_workout_template.xml
@@ -30,5 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editWorkoutTemplateRv"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/ic_add_white" />
+        android:backgroundTint="#0061ef"
+        app:srcCompat="@drawable/ic_add_white"
+        app:tint="@color/white" />
 </RelativeLayout>
