--- a/app/src/main/res/layout/activity_selectable_exercises.xml
+++ b/app/src/main/res/layout/activity_selectable_exercises.xml
@@ -17,8 +17,10 @@
         android:id="@+id/addToWorkoutTemplateBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="500dp"
         android:layout_marginLeft="320dp"
+        android:layout_marginTop="500dp"
         android:clickable="true"
+        android:backgroundTint="#0061ef"
+        app:tint="@color/white"
         app:srcCompat="@drawable/ic_add_white" />
 </RelativeLayout>
