--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -19,8 +19,8 @@
         android:layout_marginTop="585dp"
         android:backgroundTint="#0061ef"
         android:clickable="true"
-        app:tint="@color/white"
-        app:srcCompat="@drawable/ic_add_black" />
+        app:srcCompat="@drawable/ic_add_black"
+        app:tint="@color/white" />
 
 
 </RelativeLayout>
