--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -23,6 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textAllCaps="false"
+        android:background="@drawable/custom_button"
+        android:textColor="@color/white"
         android:text="Új gép felvétele"></Button>
 
 
