--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -23,13 +23,15 @@
         android:textAllCaps="false"
         android:layout_centerInParent="true"
         android:layout_marginTop="50dp"
+        android:background="@drawable/custom_button"
+        android:textColor="@color/white"
         android:layout_below="@+id/templateRv"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/templateRv"
         android:layout_width="match_parent"
-        android:layout_height="335dp"
+        android:layout_height="400dp"
         android:layout_below="@id/templateTitle" />
 
 
