--- a/app/src/main/res/layout/fitnessmachine_item.xml
+++ b/app/src/main/res/layout/fitnessmachine_item.xml
@@ -3,15 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/fitnessmachine_settings_TitleTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="Gép neve:"
-        android:textSize="16sp" />
+
 
     <TextView
         android:id="@+id/fitnessmachine_settings_NameTv"
@@ -20,8 +12,20 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_toEndOf="@+id/fitnessmachine_settings_TitleTv"
         android:gravity="center"
-        android:text=""
+        android:text="gép neve"
         android:textSize="16sp" />
+
+
+    <TextView
+        android:id="@+id/fitnessmachine_settings_Exercise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/fitnessmachine_settings_NameTv"
+        android:gravity="center"
+        android:text="gyakorlat"
+        android:textSize="16sp" />
+
 </RelativeLayout>
