--- a/app/src/main/res/menu/startworkout_menu.xml
+++ b/app/src/main/res/menu/startworkout_menu.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-
     <item android:id="@+id/startworkout_add"
         android:title="Ismétlés hozzáadás"/>
-
     <item android:id="@+id/startworkout_remove"
-        android:title="Ismétlés törlés"/>
-
+        android:title="Ismétlés törlése"/>
 </menu>
